--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ main{
   margin: 0% 8% 0% 8%;
   border-right: 2px solid black;
   border-left: 2px solid black;
-  border-bottom: 2px solid black;
 }
 
 section{
@@ -66,16 +65,7 @@ img{
 }
 
 form{
-  background-color: rgb(235, 234, 233);
-  padding: 1%;
-  border-radius: 1% 1%;
+  background-color: white;
+  padding: 2%;
   border: solid black 2px;
-  margin: 0vw 27vw 0vw 27vw;
-}
-
-footer{
-  text-align: right;
-  font-size: 20px;
-  padding: 4px;
-  font-family: cursive;
 }
